--- a/web/WEB-INF/templates/default/pages/cart/include/buyNow.jspf
+++ b/web/WEB-INF/templates/default/pages/cart/include/buyNow.jspf
@@ -9,7 +9,7 @@
 
 
 		<div class="w-car-box">
-        	<div class="w-car-box-tit">购物车</div>
+        	<div class="w-car-box-tit">购物车rrrrrrrrrrrr</div>
             <div class="w-car-box-list-tit">
                 <table width="100%" border="0" cellspacing="0" cellpadding="0">
                     <tr>
