--- a/web/WEB-INF/templates/default/resources/styles/css/order-edit.css
+++ b/web/WEB-INF/templates/default/resources/styles/css/order-edit.css
@@ -43,7 +43,7 @@ ul,li{ list-style:none;}
 .add-address-btn a{ color:#313131; font-weight:bold;}
 .add-address-btn a:hover{ text-decoration:underline; color:#fbbd6a;}
 .the-next{ margin-top:20px;}
-.the-next a.next{ text-decoration:none; color:#FFF; display:block; text-align:center; line-height:60px; border:solid 2px #fbbd6a; background:#fbbd6a;}
+.the-next a.next{ text-decoration:none; color:#FFF; display:block; text-align:center; line-height:50px; border:solid 2px #fbbd6a; background:#fbbd6a;}
 .the-next a.next:hover{ background:none; color:#fbbd6a;}
 .page{ text-align:center;}
 .page a{ color:#757575; font-size:16px; margin:0 10px;}
@@ -61,7 +61,7 @@ ul,li{ list-style:none;}
 .item2 ul li p input{ width:100%; padding:5px 0; text-indent:10px; border:solid 2px #757575;}
 .item2 ul li p label{ font-weight:normal;}
 .item2 ul li p label input{ width:auto; padding:0; vertical-align:middle; margin:-2px 5px 0 0; border:none;}
-.item2 ul li a.next{ text-decoration:none; color:#FFF; display:block; text-align:center; line-height:60px; border:solid 2px #fbbd6a; background:#fbbd6a;}
+.item2 ul li a.next{ text-decoration:none; color:#FFF; display:block; text-align:center; line-height:50px; border:solid 2px #fbbd6a; background:#fbbd6a;}
 .item2 ul li a.next:hover{ background:none; color:#fbbd6a;}
 
 .item3-content{ width:80%; margin:0 auto; margin-top:15px;}
@@ -84,8 +84,10 @@ ul,li{ list-style:none;}
 .item3-bottom h3{ margin:0; font-weight:normal; font-size:18px;}
 .item3-bottom h3 b{ float:right; }
 .the-big-bth{ margin-top:20px;}
-.the-big-bth a{ display:block; text-align:center; color:#FFF; border:solid 2px #fbbd6a; background:#fbbd6a; line-height:60px;}
-.the-big-bth a:hover{ background:none; color:#fbbd6a;}
+.the-big-bth button{ display:block; text-align:center; color:#FFF; border:solid 2px #fbbd6a; background:#fbbd6a; line-height:40px; width:100%;border-radius: 0;}
+.the-big-bth button:hover{ background:none; color:#fbbd6a;}
+.btn:focus,.btn.focus { color:#fff;}
+
 
 .m-order-tit{ margin-top:60px; display:none;}
 .m-order-tit span{ float:left; display:block; width:33.333333%; text-indent:10px; border-bottom:solid 1px #858585; padding:20px 0; position:relative; z-index:1302; cursor:pointer;   border-left: solid 1px #858585; border-left:-1px; background:#e9e9e9;}
@@ -106,8 +108,8 @@ ul,li{ list-style:none;}
 @media (max-width: 768px){
 	.w-order-edit.row{ margin-top:0;}
 	.pro-show-hide ul li{ margin-right:10px;}
-	.the-next a.next{ line-height:50px;}
-	.item2 ul li a.next{ line-height:50px;}
-	.the-big-bth a{ line-height:50px;}
+	.the-next a.next{ line-height:40px;}
+	.item2 ul li a.next{ line-height:40px;}
+	.the-big-bth a{ line-height:30px;}
 	.m-order-tit{ margin-top:50px;}
 }
