--- a/web/WEB-INF/templates/default/decorators/include/headerNew.jspf
+++ b/web/WEB-INF/templates/default/decorators/include/headerNew.jspf
@@ -279,7 +279,7 @@
 				</div>
 				<div class="row visible-md-block visible-lg-block">
 					<div class="col-md-2 col-lg-2 w-logo">
-						<a href="${ctxPath}/index.html">四方街</a>
+						<a href="${ctxPath}/index.html" id="w-logot" class="logo_b change_logo"></a>
 					</div>
 					<div class="col-md-6 col-lg-7">
 						<ul class="w-menu list-unstyled">
@@ -326,7 +326,7 @@
 						<a href="javascript:void(0)"><i class="fa fa-bars"></i> </a>
 					</div>
 					<div class="col-xs-4 col-sm-6 w-logo text-center">
-						<a href="${ctxPath}/index.html">四方街</a>
+						<a href="${ctxPath}/index.html" id="w-logot" class="logo_b change_logo"></a>
 					</div>
 					<div class="col-xs-4 col-sm-3 text-right w-gwct"
 						style="padding-bottom: 50px;">
