--- a/web/WEB-INF/templates/default/decorators/include/headerMarket.jspf
+++ b/web/WEB-INF/templates/default/decorators/include/headerMarket.jspf
@@ -1,8 +1,6 @@
 <div class="w-login">
 			<div class="w-login-s"></div>
 			<div class="w-login-c">
-			<form method="post" name="loginForm" id="loginForm"
-					action="${ctxPath}/index_check.html" onsubmit="return checkLogin()">
 				<div class="w-login-left">
 						<div class="w-l-close">
 							<a href="javascript:void(0)"> <i class="fa fa-times"></i> </a>
@@ -75,7 +73,7 @@
 						</div>
 						<div class="w-l-btn">
 							<div class="w-l-itemscon">
-								<button name="login" class="btn btn-default signin" type="submit" onClick="index_login()">
+								<button name="login" class="btn btn-default signin" onClick="index_login()">
 									登陆
 								</button>
 							</div>
@@ -102,7 +100,6 @@
 							</div>
 						</div>
 					--%></div>
-				</form>
 				<form id="customerRegisterForm" action="register.html" method="post" onsubmit="return checkRegister()">
 				<div class="w-login-right">
 					<div class="w-l-close">
@@ -238,29 +235,31 @@
 						<div class="w-car-sj"></div>
 						<div class="w-car-con">
 							<ul class="list-unstyled clearfix">
-							<c:forEach items="${shoppingcart.cartItems}" var="item" varStatus="varStatus" begin="0" end ="1">
-								<c:if test="${item.isSaved==0 and empty item.parent}">
-									<li class="clearfix">
-									<div class="w-car-img">
-										<product:productImg sku="${item.productSku}" size="e" width="100" height="100"/>
-									</div>
-									<div class="w-car-info">
-										<span><product:productName product="${item.productSku.product}"/></span>
-										<span>${item.productSku.product.brand.brandName}</span>
-										<span class="w-car-price">￥<system:CurrencyForRate value="${item.price}" /></span>
-									</div>
-									</li>
-								</c:if>
-							</c:forEach>
+							<span id="shoppingCartItem">
+								<c:forEach items="${shoppingcart.cartItems}" var="item" varStatus="varStatus" begin="0" end ="1">
+									<c:if test="${item.isSaved==0 and empty item.parent}">
+										<li class="clearfix">
+										<div class="w-car-img">
+											<img src="${ctxPath}/media/product/e/${item.productSku.image}"width="100" height="100">
+										</div>
+										<div class="w-car-info">
+											<span>${item.productSku.product.productName}</span>
+											<span>${item.productSku.product.brand.brandName}</span>
+											<span class="w-car-price">￥${item.price}</span>
+										</div>
+										</li>
+									</c:if>
+								</c:forEach>
+							</span>
 							</ul>
 							<div class="w-car-msg">
-								购物车里还有${shoppingcart.buyNowItemsCount <=2 || shoppingcart.buyNowItemsCount ==null?0:shoppingcart.buyNowItemsCount -2}件物品
+								购物车里还有<span id="buyNow">${shoppingcart.buyNowItemsCount <=2 || shoppingcart.buyNowItemsCount ==null?0:shoppingcart.buyNowItemsCount -2}</span>件物品
 							</div>
 							<div class="w-car-zj clearfix">
 								<div class="w-car-zjmc">
 									总计：
 								</div>
-								<div class="w-car-price">
+								<div class="w-car-price" id="subtotalHeader">
 									￥ ${shoppingcart.subtotal == null?0:shoppingcart.subtotal}
 								</div>
 							</div>
@@ -293,6 +292,7 @@
                                             <a href="#">傳已經的然</a>
                                         </div>
                                     --%></dd>
+                                    <dd <c:if test="${fn:indexOf(OriginalRequestURI,'/year')!=-1}">class='current'</c:if>><a href="/static/year.html"><i></i> 周年庆</a></dd>
                                     <dd <c:if test="${fn:indexOf(OriginalRequestURI,'/man')!=-1 && fn:indexOf(OriginalRequestURI,'_catalog.html')!=-1}">class='current'</c:if>><a href="/man_catalog.html"><i></i>男士</a></dd>
                                     <dd <c:if test="${fn:indexOf(OriginalRequestURI,'/wen')!=-1 && fn:indexOf(OriginalRequestURI,'_catalog.html')!=-1}">class='current'</c:if>><a href="/wen_catalog.html"><i></i>女士</a></dd>
                                     <dd <c:if test="${fn:indexOf(OriginalRequestURI,'/catalog_default_catalog.html')!=-1}">class='current'</c:if>><a href="/catalog_default_catalog.html"><i></i>所有产品</a></dd>
@@ -333,7 +333,7 @@
 						<a href="javascript:void(0)"><i class="fa fa-bars"></i> </a>
 					</div>
 					<div class="col-xs-4 col-sm-6 w-logo text-center">
-						<a href="${ctxPath}/index.html" id="w-logot" class="logo_w change_logo"></a>
+						<a href="${ctxPath}/index.html" id="w-logot" class="logo_b change_logo"></a>
 					</div>
 					<div class="col-xs-4 col-sm-3 text-right w-gwct"
 						style="padding-bottom: 50px;">
@@ -409,50 +409,3 @@
 			</div>
 			</div><!--nav2-bg--><!--2015-9 和其他一级页面不同的地方--> 
 		</div>
-<script>
-	function index_login(){
-		  var url =""+self.location.href;
-		   $("#papeurl").val(url);
-		    //alert( $("#papeurl").val());
-		    $("#loginForm").submit();
-		}
-		
-	var swiper = new Swiper('.swiper-container', {
-		nextButton : '.swiper-page-next',
-		prevButton : '.swiper-page-prev',
-		paginationClickable : true,
-		spaceBetween : 0,
-		mousewheelControl : false,
-		loop : true,
-		autoplay: 3000,
-		speed : 500,
-		onInit : function(swiper) {
-			swiperAnimateCache(swiper);
-			swiperAnimate(swiper);
-		},
-		onSlideChangeEnd : function(swiper) {
-			swiperAnimate(swiper);
-		},
-		onTransitionEnd : function(swiper) {
-			swiperAnimate(swiper);
-		}
-	});
-
-	function refreshImage(type, obj) {
-		//var image=document.getElementById("imgValidationCode");
-		var image = $(obj).children()[0];
-		var url = "${ctxPath}/jCaptcha.html?type=" + type;
-		var xmlHttpReq = null;
-		if (window.ActiveXObject) {
-			xmlHttpReq = new ActiveXObject("Microsoft.XMLHTTP");
-		} else if (window.XMLHttpRequest) {
-			xmlHttpReq = new XMLHttpRequest();
-		}
-		xmlHttpReq.open("Post", url, true);
-		xmlHttpReq.send(null);
-
-		image.src = "${ctxPath}/jCaptcha.html?rand="
-				+ parseInt(1000 * Math.random());
-		return false;
-	}
-</script>
