--- a/web/WEB-INF/templates/default/resources/styles/css/index.css
+++ b/web/WEB-INF/templates/default/resources/styles/css/index.css
@@ -1155,7 +1155,7 @@ span.new{
 }
 
     .product .li6 a {
-        margin-right: 10px;
+        margin-right: 5px;
         color: #aaa;
     }
 
@@ -1186,7 +1186,7 @@ span.new{
 .join_box .j2 span {
     display: inline-block;
     margin-right: 9px;
-    width: 24px;
+    width：40px；
     height: 24px;
     line-height: 24px;
     cursor: pointer;
