--- a/web/WEB-INF/templates/default/resources/styles/css/pro-deta.css
+++ b/web/WEB-INF/templates/default/resources/styles/css/pro-deta.css
@@ -259,9 +259,12 @@ body{
 .w-pro-car ul li.pro-car-2 ul li a p{
 	text-align:center;
 }
-
+.w-pro-car ul li.pro-car-2 a.active img{
+	cursor:not-allowed;
+}
 .w-pro-car ul li.pro-car-2 a.active img,.w-pro-car ul li.pro-car-2 a:hover img{
 	opacity: 1;
+	border:2px #fbbd6a solid;
 }
 .w-pro-car ul li.pro-car-3{
 	margin-bottom:20px;
